--- a/example/package.json
+++ b/example/package.json
@@ -8,18 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.59.15",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "viem": "2.21.28",
-    "wagmi": "^2.12.18",
+    "@tanstack/react-query": "^5.66.7",
+    "porto": "^0.0.12",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "viem": "2.23.3",
+    "wagmi": "^2.14.11",
     "webauthn-p256": "^0.0.10"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "globals": "^15.15.0",
+    "vite": "^6.1.1"
   }
 }
